# server_supervisor

./: .gitignore  .gitmodules  CLAUDE.md  README.md  package-lock.json  package.json  procs.example.json  tsconfig.json  vite.config.ts
.github/workflows/: tauri-release.yml
docs/plans/: 2026-06-13-dashboard-ui-revamp.md
docs/specs/: 2026-06-12-dashboard-ui-revamp-design.md
docs/superpowers/plans/: 2026-05-29-port-override.md  2026-05-30-supervised-run.md
docs/superpowers/specs/: 2026-05-30-supervised-run-design.md  2026-05-30-unified-tauri-settings-design.md  2026-06-02-auto-update-design.md
src/: index.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  fsutil.rs  groups.rs  icons.rs  lib.rs  main.rs  ports.rs  settings.rs  state.rs  supervisor.rs  tray.rs  types.rs
src-tauri/src/ipc/: commands.rs
src-tauri/src/supervisor/: config.rs  crud.rs  detect.rs  dev_browser.rs  flutter.rs  mem.rs  port_inject.rs  ports_detect.rs  proc.rs  proc_tree.rs  proxy.rs  reaper.rs  registry.rs  sampler.rs  spawn_env.rs  validate.rs
src-tauri/tests/: api_test.rs  export_types.rs  ports_override_test.rs  supervisor_test.rs
src/shared/: ansi.ts  ipc.ts  theme.ts
src/styles/: base.css  devicon.css  tokens.css
src/types/: vendor-stubs.d.ts
src/vendor-stubs/: plugin-updater.ts
src/views/dashboard/: add-project.ts  combobox.ts  dashboard.css  dashboard.ts  helpers.ts  menus.ts  modals.css  modals.ts  state.ts
src/views/settings/: schema.ts  settings.css  settings.ts  token-field.ts
