[package]
name = "server_supervisor"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[lib]
name = "server_supervisor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
uuid = { version = "1", features = ["v4"] }
ts-rs = "10"
# Per-process memory + parent/child tree walk for the dashboard RAM column.
# Pinned to the 0.39 line (canonical crate, GuillaumeGomez; not the `sys-info`
# typosquat). `memory()` returns resident bytes on this version.
sysinfo = { version = "0.39", default-features = false, features = ["system"] }
tauri_kit_settings = { path = "../vendor/tauri_kit/tauri/settings" }
tauri_kit_updater = { path = "../vendor/tauri_kit/tauri/updater" }

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
